# ray-tracer

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Justfile  imgui.ini  imgui.ini.sample  premake5.lua
ray-tracer/: premake5.lua
src/: main.cpp
src/ray_tracer/: renderer.cpp  renderer.h
src/walnut/: application.cpp  image.cpp  random.cpp
src/walnut/input/: input.cpp
walnut/: premake5.lua
walnut/src/walnut/: application.cpp  application.h  entry_point.h
walnut/src/walnut/input/: input.cpp  input.h
